<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/row_bg"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="7dp">

    <TextView
        android:id="@+id/book_row_ID"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/bookrow_id"
        android:textColor="@color/row_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/book_row_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/userrow_textname"
        android:textColor="@color/row_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/book_row_author"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/bookrow_author"
        android:textColor="@color/row_text"
        android:textSize="20sp" />


</LinearLayout>