<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/row_bg"
    android:gravity="center"
    android:layout_marginBottom="1dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/rent_row_userid"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/rentrow_userid"
        android:textColor="@color/row_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rent_row_bookid"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/bookrow_bookid"
        android:textColor="@color/row_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rent_row_date"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/rentrow_date"
        android:textColor="@color/row_text"
        android:textSize="12sp" />


</LinearLayout>